# nfx-lib

./: .gitignore  README.md  build.gradle  settings.gradle
demo/: build.gradle
demo/src/main/java/xss/it/demo/: Assets.java  Demo.java  DialogExample.java  MainWindowWithFXML.java  MenuWindow.java  NfxDemoWindow.java  Undecorated.java  UndecoratedExample.java  Window.java
demo/src/main/resources/: dialog.css  dialog.fxml  main.fxml  menu-window.fxml  mfx-window.fxml  nfx-window.css  style.css  undecorated.css  undecorated.fxml
nfx-core/: build.gradle
nfx-core/src/main/java/: module-info.java
nfx-core/src/main/java/com/sun/it/nfx/: Rect.java  RestartableTimer.java  WindowState.java
nfx-core/src/main/java/xss/it/nfx/: AbstractNfxUndecoratedWindow.java  CornerPreference.java  HitSpot.java  NfxStage.java  NfxUtil.java  NfxWindow.java  WindowState.java
nfx-core/src/native/: CMakeLists.txt  README.md  resources.rc
nfx-core/src/native/src/: Nfx.cpp  NfxAbstract.cpp
nfx-core/src/native/src/jni_h/: xss_it_nfx_AbstractNfxUndecoratedWindow.h  xss_it_nfx_NfxUtil.h
nfx-core/src/native/src/os/win/: WindowProc.cpp  WindowProc.h
nfx-core/src/native/src/utils/: HwndMap.cpp  HwndMap.h  NfxWinProc.h  attach.h  utils.cpp  utils.h
